# muxr

./: Cargo.toml
muxr/: Cargo.toml
muxr/src/: client.rs  lib.rs  server.rs  state.rs
muxr/tests/: row_col.rs
muxr_client/: Cargo.toml
muxr_client/src/: error.rs  io.rs  lib.rs  main.rs  render.rs
muxr_core/: Cargo.toml
muxr_core/src/: error.rs  input.rs  lib.rs  msg.rs
muxr_server/: Cargo.toml  build.rs
muxr_server/src/: config.rs  error.rs  lib.rs  main.rs  pty.c  pty.rs  term.rs  uds.rs
muxr_server/src/server/: acceptor.rs  client.rs  mod.rs
muxr_server/src/term/: codec.rs  mod.rs
src/: client.rs  lib.rs  state.rs
