[package]
name = "muxr"
version = "0.1.0"
authors = ["Sam Wilson <tecywiz121@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
muxr_client = { version = "0.1.0", path = "../muxr_client" }
muxr_server = { version = "0.1.0", path = "../muxr_server" }
error-chain = "0.12.0"

[[bin]]
path = "src/client.rs"
name = "muxr"

[[bin]]
path = "src/server.rs"
name = "muxr_server"
