[package]
name = "muxr_server"
version = "0.1.0"
authors = ["Sam Wilson <tecywiz121@hotmail.com>"]
edition = "2018"

[dependencies]
bytes = "0.4.8"
daemonize = "0.3.0"
error-chain = "0.12.0"
lazy_static = "1.0.2"
mio = "0.6.15"
muxr = { version = "0.1.0", path = "../muxr" }
nix = "0.13.0"
tokio = "0.1.7"
tokio-codec = "0.1.0"
tokio-io = "0.1.7"
vte = "0.3.2"

[build-dependencies]
cc = "1.0.18"
