[package]
name = "muxr_server"
version = "0.1.0"
authors = ["Sam Wilson <tecywiz121@hotmail.com>"]
edition = "2018"

[dependencies]
daemonize = "0.4.1"
error-chain = "0.12.0"
lazy_static = "1.0.2"
mio = "0.6.20"
muxr_core = { version = "0.1.0", path = "../muxr_core" }
nix = "0.15.0"
vte = "0.3.2"
static_assertions = "1.0.0"
tokio = { version = "0.2.1", features = ["macros", "process", "io-util", "net", "sync", "process", "time", "uds", "stream"] }
futures-util = "0.3.11"
serde = "1.0"
bincode = "1.2.0"

[build-dependencies]
cc = "1.0.18"
